force-app/main/default/objects/SK_ACH_Capital_Call__c/SK_ACH_Capital_Call__c.object-meta.xml
<CustomObject>
    <label>Capital Call</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Capital Call Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>