force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Call_Date__c</fullName>
    <label>Call Date</label>
    <description>Date capital call is issued</description>
    <required>true</required>
    <type>Date</type>
    <defaultValue>TODAY()</defaultValue>
</CustomField>