force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Capital_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Capital_Call_Notes__c</fullName>
    <description>Additional details</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>