force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Capital_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Capital_Call_Status__c</fullName>
    <label>Status</label>
    <description>Current status</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Fully Paid</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>