force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Due_Date__c</fullName>
    <description>Date payment is due</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>