force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Fund__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Fund__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Fund issuing the capital call</description>
    <label>Fund</label>
    <referenceTo>SK_ACH_Fund__c</referenceTo>
    <relationshipLabel>Capital Calls</relationshipLabel>
    <relationshipName>Capital_Calls</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>