force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Notice_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Notice_Sent_Date__c</fullName>
    <label>Notice Sent Date</label>
    <description>When notice was sent to investors</description>
    <type>Date</type>
</CustomField>