force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Payment_Completion__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Payment_Completion__c</fullName>
    <description>Percentage of capital call that has been paid</description>
    <formula>IF(SK_ACH_Total_Amount__c &gt; 0, 
    (SK_ACH_Total_Line_Paid__c / SK_ACH_Total_Amount__c) * 100, 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Completion (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>