force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Purpose__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Purpose__c</fullName>
    <label>Purpose</label>
    <description>Reason for capital call</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Management Fees</fullName>
            </value>
            <value>
                <fullName>Operating Expenses</fullName>
            </value>
            <value>
                <fullName>Follow-on Investment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>