force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Amount__c</fullName>
    <label>Total Amount</label>
    <description>Total capital being called</description>
    <required>true</required>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>