force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Total_Line_Paid__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Line_Paid__c</fullName>
    <description>Sum of amounts paid on all lines</description>
    <label>Total Paid</label>
    <summarizedField>SK_ACH_Capital_Call_Line__c.SK_ACH_Amount_Paid__c</summarizedField>
    <summaryForeignKey>SK_ACH_Capital_Call_Line__c.SK_ACH_Capital_Call__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>