force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Outstanding__c</fullName>
    <description>Total Amount minus Total Paid</description>
    <formula>SK_ACH_Total_Amount__c - SK_ACH_Total_Line_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>