force-app/main/default/objects/SK_ACH_Capital_Call__c/fields/SK_ACH_Wire_Instructions__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Wire_Instructions__c</fullName>
    <description>Bank details for payment</description>
    <label>Wire Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>