force-app/main/default/objects/SK_ACH_Capital_Call__c/validationRules/Capital_Call_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Capital_Call_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Capital call total amount must be greater than zero</description>
    <errorConditionFormula>SK_ACH_Total_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Capital call amount must be greater than zero.</errorMessage>
</ValidationRule>