force-app/main/default/objects/SK_ACH_Capital_Call__c/validationRules/Due_Date_After_Call_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_After_Call_Date</fullName>
    <active>true</active>
    <description>Due date must be after call date</description>
    <errorConditionFormula>SK_ACH_Due_Date__c &lt; SK_ACH_Call_Date__c</errorConditionFormula>
    <errorDisplayField>SK_ACH_Due_Date__c</errorDisplayField>
    <errorMessage>Due date must be on or after the call date.</errorMessage>
</ValidationRule>