force-app/main/default/objects/SK_ACH_Capital_Call__c/listViews/Outstanding_Capital_Calls.listView-meta.xml
<ListView>
    <fullName>Outstanding_Capital_Calls</fullName>
    <columns>NAME</columns>
    <columns>SK_ACH_Fund__c</columns>
    <columns>SK_ACH_Call_Date__c</columns>
    <columns>SK_ACH_Due_Date__c</columns>
    <columns>SK_ACH_Total_Amount__c</columns>
    <columns>SK_ACH_Total_Line_Paid__c</columns>
    <columns>SK_ACH_Total_Outstanding__c</columns>
    <columns>SK_ACH_Payment_Completion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SK_ACH_Capital_Call_Status__c</field>
        <operation>equals</operation>
        <value>Partially Paid</value>
    </filters>
    <label>Outstanding Capital Calls</label>
</ListView>