force-app/main/default/objects/SK_ACH_Capital_Call__c/listViews/Recent_Capital_Calls.listView-meta.xml
<ListView>
    <fullName>Recent_Capital_Calls</fullName>
    <columns>NAME</columns>
    <columns>SK_ACH_Fund__c</columns>
    <columns>SK_ACH_Call_Date__c</columns>
    <columns>SK_ACH_Total_Amount__c</columns>
    <columns>SK_ACH_Capital_Call_Status__c</columns>
    <columns>SK_ACH_Purpose__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Capital Calls</label>
</ListView>